created a style.css file and a persona.html also a user-story.html and use-case

--- a/epic/persona.html
+++ b/epic/persona.html
@@ -9,23 +9,31 @@
 <body>
 <div class="center">
 	<img src="jlo.jpg" height="168" width="300" alt="center"/>
-	<p class ="center">Jeniffer Lopez</p>
+	<p class ="center"><strong>Jeniffer Lopez</strong></p>
 </div>
 <h1>American actress, and Dancer</h1>
 <ul>
 
-	<li>Jeniffer Lopez is an american actress, singer, dancer, fashion designer, producer,
-		and businesswoman</li>
-	<li>Age 50</li>
-	<li>She made her first movie in 1995,</li>
-	<li>She began singing and producing music videos in 1990.</li>
-	<li>In 1997 she had her big break making the movie of selena and there She earned the golden globe
-		nomination for that movie</li>
-	<li>Later establishing herself as the highest-paid Latin actress in hollywood.</li>
-	<li>She has been married three times.
-	<li>Has Two kids one boy and one girl.</li>
-	<li>She works out four hours a day</li>
-	<li>Her net worth is US $400 million since 2019.</li>
+	<li><strong>Name:</strong> Jeniffer Lopez</li>
+	<li><strong>Age:</strong>50</li>
+	<li><strong>Gender:</strong>Female</li>
+	<li><strong>Race:</strong>Latina</li>
+	<li><strong>Occupation:</strong>American Actress, singer and Buisness Women</li>
+	<li><strong>Technology:</strong> <em>Phone</em>; iphone 11 pro. <em>Laptop</em>; MacBook Pro.</li>
+	<li><strong>Attitude:</strong>Likes to listen to her own music, prefers to pay it a year in advance,
+		Reads all comments about her music.</li>
+	<li><strong>Needs/Goals/Features:</strong><li>
+	<ul>
+	<li>Ability to check out latest version of music</li>
+	<li>Able to check updates</li>
+	<li>Enjoys listening to familiar artist</li>
+	</ul>
+	<li><strong>Frustrations:</strong></li>
+	<ul>
+		   <li>Too many adds</li>
+			<li>Music stops playing</li>
+			<li>Too many unknown albums</li>
+
 </ul>
 
 </body>
