--- a/epic/user-story.html
+++ b/epic/user-story.html
@@ -7,22 +7,9 @@
 </head>
 <body>
 
-<ul>
+	<h2>User Story:</h2>
+<p>As a user, Jennifer would like to no longer see ads</p>
 
-	<li>As a user i would like to be able to manage my own videos</li>
-	<li>Be able to see my music videos at a fast speed</li>
-	<li>I want to see many things pop up</li>
-	<li>I want to have a variety of dance videos and music videos to pick from</li>
-	<li>I would like to be able to have a top list</li>
-	<li>Has to have no adds </li>
-	<li>Has to have no error messages that show</li>
-	<li>Made to all audience of ages 18 and up</li>
-	<li>A place to store passwords</li>
-	<li>No other things other then music and dance</li>
-	<li>Be able to download without getting a virus</li>
-
-
-</ul>
 
 </body>
 </html>
