--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Dancing and music videos</title>
+	<title>Spotify</title>
 </head>
 <body>
 
-<a href="epic/user-story.html">user story</a>
-<a href="epic/use-case-interaction-flow.php.html">use case interaction flow</a>
-<a href="epic/persona.html">persona</a>
+
+<h1>Data Design Project</h1>
+
+<h2>User Persona:</h2>
+<ul>
+	<li><a href="epic/persona.html">persona</a></li>
+	<li><a href="epic/use-case-interaction-flow.php.html">use case interaction flow</a></li>
+	<li><a href="epic/user-story.html">user story</a></li>
+</ul>
 
 </body>
 </html>
+
+
