created a style.css file and a persona.html also a user-story.html and use-case

--- a/epic/use-case-interaction-flow.php.html
+++ b/epic/use-case-interaction-flow.php.html
@@ -6,15 +6,23 @@
 </head>
 <body>
 
+<h2>Use Case:</h2>
+<p><strong>Title:</strong> Having no trouble with Spotify</p>
+<p><strong>Description:</strong> Jennifer wants to be able to listen to music without having any adds</p>
+<p><strong>Name of user &amp; their role:</strong> Jennifer; music artists who likes to listen to her music through spotify</p>
+<p><strong>Usage preconditions:</strong> Must have a valid credit or debit card on file</p>
+<p><strong>Usage postconditions:</strong> Jennifer paid one year ahead</p>
+<p><strong>Interaction flow:</strong></p>
 <ul>
-	<li>Dancing and music videos</li>
-	<li>This is a web page where you will be allowed to see music videos and dancing videos.</li>
-	<li>Jennifer Lopez, music artist, american actress and dancer.</li>
-	<li>Discover a new website that provides many videos.</li>
-	<li>When I log into the website I want no error messages, and no adds</li>
-	<li>User has a complaint that the website recently has showed too many adds, the webpage lets
-		her know it will be fixed as soon as possible and if she had any more concerns to let them know</li>
-	<li>Uses it 14 hours a day</li>
+	<li>Jennifer logs into spotify</li>
+	<li>She notices that one add wants to pop up and her music stops playing</li>
+	<li>Jennifer goes into the web page to see what she can do and notifies the server</li>
+	<li>Server notifies her that the problem has been fixed</li>
+	<li>Jennifer notices that her music is playing constently and there is not any adds</li>
+	<li>The server allows Jennifer to have no adds </li>
+	<li>Jennifer is able to listen to any song whenever she wants</li>
 </ul>
-</body>
-</html>
+<p><strong>Frequency of Use:</strong> 7 hours a day</p>
+
+
+
