created a style.css file and a persona.html also a user-story.html and use-case

--- a/epic/user-story.html
+++ b/epic/user-story.html
@@ -8,7 +8,7 @@
 <body>
 
 	<h2>User Story:</h2>
-<p>As a user, Jennifer would like to no longer see ads</p>
+<p>As a user, Jennifer would like to no longer see ads on Spotify and no pop up videos</p>
 
 
 </body>
