--- a/epic/use-case-interaction-flow.php.html
+++ b/epic/use-case-interaction-flow.php.html
@@ -8,18 +8,18 @@
 
 <h2>Use Case:</h2>
 <p><strong>Title:</strong> Having no trouble with Spotify</p>
-<p><strong>Description:</strong> Jennifer wants to be able to listen to music without having any adds</p>
+<p><strong>Description:</strong> Jennifer wants to be able to listen to music without having any ads</p>
 <p><strong>Name of user &amp; their role:</strong> Jennifer; music artists who likes to listen to her music through spotify</p>
 <p><strong>Usage preconditions:</strong> Must have a valid credit or debit card on file</p>
 <p><strong>Usage postconditions:</strong> Jennifer paid one year ahead</p>
 <p><strong>Interaction flow:</strong></p>
 <ul>
 	<li>Jennifer logs into spotify</li>
-	<li>She notices that one add wants to pop up and her music stops playing</li>
-	<li>Jennifer goes into the web page to see what she can do and notifies the server</li>
-	<li>Server notifies her that the problem has been fixed</li>
-	<li>Jennifer notices that her music is playing constently and there is not any adds</li>
-	<li>The server allows Jennifer to have no adds </li>
+	<li>Jennifer notices that one ad wants to pop up and her music stops playing</li>
+	<li>Jennifer clicks on the X that is on the ad</li>
+	<li>The add then pops back up in not even a min</li>
+	<li>Jennifer goes to the browser and checks out the prices that spotify gives</li>
+	<li>She then puts all her information to no longer have any problems with ads</li>
 	<li>Jennifer is able to listen to any song whenever she wants</li>
 </ul>
 <p><strong>Frequency of Use:</strong> 7 hours a day</p>
