--- a/epic/use-case-interaction-flow.php.html
+++ b/epic/use-case-interaction-flow.php.html
@@ -15,9 +15,11 @@
 <p><strong>Interaction flow:</strong></p>
 <ul>
 	<li>Jennifer logs into spotify</li>
+	<li>Spotify shows top playlist</li>
+	<li>Jennifer clicks on her latest album</li>
 	<li>Jennifer notices that one ad wants to pop up and her music stops playing</li>
 	<li>Jennifer clicks on the X that is on the ad</li>
-	<li>The add then pops back up in not even a min</li>
+	<li>The server then adds another ad in less then a min</li>
 	<li>Jennifer goes to the browser and checks out the prices that spotify gives</li>
 	<li>She then puts all her information to no longer have any problems with ads</li>
 	<li>Jennifer is able to listen to any song whenever she wants</li>
