created a style.css file and a persona.html also a user-story.html and use-case

--- a/epic/use-case-interaction-flow.php.html
+++ b/epic/use-case-interaction-flow.php.html
@@ -22,6 +22,7 @@
 	<li>The server then adds another ad in less then a min</li>
 	<li>Jennifer goes to the browser and checks out the prices that spotify gives</li>
 	<li>She then puts all her information to no longer have any problems with ads</li>
+	<li>The server then allows Jennifer to listen to amy album ad free</li>
 	<li>Jennifer is able to listen to any song whenever she wants</li>
 </ul>
 <p><strong>Frequency of Use:</strong> 7 hours a day</p>
