created a style.css file and a persona.html also a user-story.html and use-case

--- a/epic/erd.html
+++ b/epic/erd.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 
+<h2>Entity Relationship Diagram</h2>
 
+
+<img src="Basic Database ER Diagram (Crow's Foot).png" height="1360" width="1760" alt = "Data Design ERD"/>
 </body>
 </html>
