created a style.css file and a persona.html also a user-story.html and use-case

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<li><a href="epic/persona.html">persona</a></li>
 	<li><a href="epic/use-case-interaction-flow.php.html">use case interaction flow</a></li>
 	<li><a href="epic/user-story.html">user story</a></li>
+	<li><a href="epic/erd.html">erd</a> </li>
+	<li><a href="epic/conceptual-model.html">conceptual-model</a></li>
 </ul>
 
 </body>
