created a style.css file and a persona.html also a user-story.html and use-case

--- a/epic/conceptual-model.html
+++ b/epic/conceptual-model.html
@@ -33,7 +33,7 @@
 	<li>artistId (primary key)</li>
 	<li>artistGenre</li>
 	<li>artistName</li>
-	<li>songs</li>
+	<li>artistSongs</li>
 
 </ul>
 <ul>
