created a style.css file and a persona.html also a user-story.html and use-case

--- a/epic/conceptual-model.html
+++ b/epic/conceptual-model.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h3>Entities &amp; Attributes:</h3>
-<p><strong>SPOTIFY:</strong>
+<strong>SPOTIFY:</strong>
 <ul>
 
 </ul>
@@ -19,6 +19,7 @@
 	<li>userPlaylistId</li>
 </ul>
 <ul>
+
 	<strong>PLAYLIST:</strong>
 
 	<li>playlistId (primary key)</li>
