created a style.css file and a persona.html also a user-story.html and use-case

--- a/epic/conceptual-model.html
+++ b/epic/conceptual-model.html
@@ -16,7 +16,7 @@
 	<li>userId (primary key)</li>
 	<li>userEmail</li>
 	<li>userPassword</li>
-	<li>userPlaylistId</li>
+	<li>userPlaylist</li>
 </ul>
 <ul>
 
@@ -25,7 +25,7 @@
 	<li>playlistId (primary key)</li>
 	<li>playlistArtistId(foreign key)</li>
 	<li>PlaylistGenre</li>
-	<li>playlistUserId (foreign key)</li>
+	<li>playlistTitle</li>
 
 </ul>
 
@@ -35,6 +35,7 @@
 	<li>artistGenre</li>
 	<li>artistName</li>
 	<li>artistSongs</li>
+	<li>artistPlaylistId (foreign key)</li>
 
 </ul>
 <ul>
